Fixed css issues in players page and finished the League Leaders page. Updating Players Profile Page